aws deployment testing

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ giffygram.json
 .vscode
 dist
 .DS_Store
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
